--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budget-tracker",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1"
   },
